--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -12,7 +12,7 @@
 -block page-header
   .spa-title.rounded.bg-gray-600.mb-5.shadow
     .flex.flex-row
-      .text-2xl.text-white.flex-grow.px-5.py-2(style="min-height:2em")
+      .text-2xl.text-white.flex-grow.px-5.py-2.title-text(style="min-height:2em")
         -block page-title
       .spa-page-menu
         -include "spa_page_menu.haml"
