--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -9,6 +9,20 @@
 -block extra-less
 -block extra-script
 
+
+:javascript
+  var menuPath = '{{menu_path}}';
+  if (menuPath != "None") {
+    collapsed = false;
+    if (menuPath.indexOf("@") == 0) {
+      menuPath = menuPath.substring(1);
+      collapsed = true;
+    }
+
+    var menu = document.querySelector("temba-menu");
+    // menu.setFocusedItem(menuPath, collapsed);
+  }
+
 -block page-header
   .spa-title.rounded.bg-gray-600.mb-5.shadow
     .flex.flex-row
